--- a/index.html
+++ b/index.html
@@ -17,28 +17,28 @@
     <div class="keys">
         <div data-key="65" class="key">
             <kbd>A</kbd>
-            <span class="sound">klik</span>
+            <span class="sound">sound 1</span>
 
         </div>
         <div data-key="83" class="key">
             <kbd>S</kbd>
-            <span class="sound">bum</span>
+            <span class="sound">sound 2</span>
 
         </div>
         <div data-key="68" class="key">
-            <kbd>D</kbd> <span class="sound">drum</span></div>
+            <kbd>D</kbd> <span class="sound">sound 3</span></div>
         <div data-key="70" class="key">
-            <kbd>F</kbd> <span class="sound">trrrr</span></div>
+            <kbd>F</kbd> <span class="sound">sound 4</span></div>
         <div data-key="71" class="key">
-            <kbd>G</kbd> <span class="sound">hit</span></div>
+            <kbd>G</kbd> <span class="sound">sound 5</span></div>
         <div data-key="72" class="key">
-            <kbd>H</kbd><span class="sound">bzium</span></div>
+            <kbd>H</kbd><span class="sound">sound 6</span></div>
         <div data-key="74" class="key">
-            <kbd>J</kbd> <span class="sound">gong</span></div>
+            <kbd>J</kbd> <span class="sound">sound 7</span></div>
         <div data-key="75" class="key">
-            <kbd>K</kbd><span class="sound">laser</span></div>
+            <kbd>K</kbd><span class="sound">sound 8</span></div>
         <div data-key="76" class="key">
-            <kbd>L</kbd> <span class="sound">light</span></div>
+            <kbd>L</kbd> <span class="sound">sound 9</span></div>
     </div>
 
     <audio data-key="65" src="sounds/click_x.wav"></audio>
